# medicalassistant

./: .gitignore  manage.py  pyproject.toml
medicalassistant/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
